fixed the alignement of the navbar, adjusted the layout for the image and paragraph, styled the skills section, added the names of the skills + included media queries to make the about page repsonsive on mobile

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -1,37 +1,85 @@
 .AboutMe {
-  margin: 2rem;
   display: block;
   flex-direction: row;
 }
+.About {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .AboutMe .About p {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 600;
   font-style: normal;
   color: #9b9797;
   margin: 1rem;
+  line-height: 1.5rem;
+}
+
+/*styling the skills section */
+
+h1 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 2rem;
+  font-weight: 900;
 }
 .Skills {
+  margin: 4rem;
   display: grid;
   border: 2px;
   grid-template-columns: auto auto auto;
   grid-gap: 2rem;
   background-color: #f7f5de;
-
   padding: 5px;
 }
 
 .Skills > div {
   text-align: center;
   padding: 10px 0;
-  font-size: 30px;
-  border-radius: 2rem;
+  font-size: 20px;
+  border-radius: 2rem 1rem;
   background-image: linear-gradient(80deg, #f7f5de, #c3e4d0);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+/* Media query for mobile devices */
+@media only screen and (max-width: 600px) {
+  .AboutMe,
+  .About {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+  }
+  .About img {
+    max-width: 50%;
+    height: auto;
+  }
+  .AboutMe .About p {
+    font-size: 1rem;
+  }
+  .Skills {
+    grid-template-columns: auto auto;
+  }
 }
 
-item1 {
-  grid-row: 1 / span;
+@media only screen and (max-width: 820px) {
+  .AboutMe,
+  .About {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem;
+  }
 }
-.item2 {
-  grid-row: 1 / span 1;
+@media only screen and (max-width: 1024px) {
+  .AboutMe,
+  .About {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
